new/prusti/tests/pass/parse/invalid_prusti_attributes.stderr
error: "unexpected Prusti attribute; expected `prusti::requires` or `prusti::ensures`"
 --> $DIR/invalid_prusti_attributes.rs:7:1
  |
7 | fn test1() {}
  | ^^^^^^^^^^^^^

error: "unexpected Prusti attribute; expected `prusti::requires` or `prusti::ensures`"
  --> $DIR/invalid_prusti_attributes.rs:10:1
   |
10 | fn test2() {}
   | ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

